Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -2,10 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Personal Site</title>
+  <title>Peter Godziela | Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Add your HTML content here -->
+  <!-- Hero Section -->
+  <section class="hero">
+    <img src="Peter Hero Image.jpeg" alt="" class="hero-img">
+    <h1>Peter Godziela</h1>
+    <p class="subtitle">My Portfolio as an Aspiring Web Developer</p>
+  </section>
+
+  <!-- Bio Section -->
+  <section class="bio">
+    <h2>About Me</h2>
+    <p>
+      Hey there! I'm currently studying web development enrolled in the Global Career Accelerator. I enjoy learning new skills and building creative projects. This website will showcase my work throughout the course as I grow my skills.
+    </p>
+  </section>
+
+  <!-- Skills Section -->
+  <section class="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript (learning)</li>
+    </ul>
+  </section>
 </body>
 </html>
