Update index.html for improved structure and readability

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <section class="hero">
     <img src="Peter Hero Image.jpeg" alt="" class="hero-img">
     <h1>Peter Godziela</h1>
-    <p class="subtitle">My Portfolio as an Aspiring Web Developer</p>
+    <p class="subtitle">Aspiring Web Developer</p>
   </section>
 
   <!-- Bio Section -->
